# python-project-50

./: Makefile  README.md  demo.cast  demo1.cast  demo2.cast  demo3.cast  file_result_json.txt  file_result_plain.txt  pyproject.toml
.github/workflows/: README.md
gendiff/: __init__.py
gendiff/formaters/: formater_json.py  formater_plain.py  stylish.py
gendiff/scripts/: _init_.py  file_parser.py  gendiff.py  generate_diff.py  generate_diff1.py  parser.py
tests/: test_gendiff.py  test_gendiff1.py
tests/fixtures/: file_result.txt  file_result_plain.txt  result_test_json.txt
